# cern-open-data-rdm

./: Dockerfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg  pyproject.toml
site/: setup.cfg
site/open_data_rdm/: __init__.py  views.py  webpack.py
site/open_data_rdm/assets/semantic-ui/js/curate/: CurateApp.js
site/open_data_rdm/assets/semantic-ui/js/records/: .babelrc.js  CI-INTEGRATION-SUMMARY.md  CI-INTEGRATION.md  FINAL-SUCCESS-REPORT.md  SETUP.md  TESTING-STATUS.md  jest.config.js  package-lock.json
site/open_data_rdm/assets/semantic-ui/js/records/coverage/: coverage-summary.json  index.html  lcov.info
site/open_data_rdm/assets/semantic-ui/js/records/coverage/lcov-report/: index.html
site/open_data_rdm/assets/semantic-ui/js/records/coverage/lcov-report/records/: .babelrc.js.html  app.js.html  (+8 more)
site/open_data_rdm/assets/semantic-ui/js/records/coverage/records/: .babelrc.js.html  CitationsApp.js.html  FilesBoxApp.js.html  app.js.html  config.js.html  constants.js.html  hooks.js.html  index.html  minimal-test.js.html  utils.js.html
site/open_data_rdm/assets/semantic-ui/js/search/components/: YearRangeSlider.js
site/open_data_rdm/assets/semantic-ui/scss/: styles.scss
site/open_data_rdm/templates/semantic-ui/cernopendata_pages/: release_details.html
site/open_data_rdm/templates/semantic-ui/cernopendata_pages/front/: index.html  lva.html  main.html
site/open_data_rdm/templates/semantic-ui/cernopendata_search_ui/: search.html
site/open_data_rdm/templates/semantic-ui/cernopendata_theme/: footer.html  header.html  page.html
(+17 files in other folders)
