
[metadata]
name = open-data-rdm

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    open_data_rdm_views = open_data_rdm.views:create_blueprint
invenio_assets.webpack =
    open_data_rdm_theme = open_data_rdm.webpack:theme
    open_data_glossary = open_data_rdm.webpack:glossary
